[package]
name = "op-succinct-host-utils"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]

# sp1
sp1-sdk.workspace = true

# local
op-succinct-client-utils.workspace = true

# op-alloy
maili-genesis.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true
maili-protocol.workspace = true
maili-rpc.workspace = true
op-alloy-consensus.workspace = true

# alloy
alloy-signer-local = { workspace = true, default-features = false }
alloy-provider = { workspace = true, default-features = false }
alloy-transport = { workspace = true, default-features = true }
alloy-transport-http = { workspace = true, default-features = true }
alloy-rlp = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
alloy-consensus = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true, default-features = false }
alloy-eips = { workspace = true, default-features = false }
alloy-contract = { workspace = true, default-features = false }

# kona
kona-host.workspace = true
kona-preimage.workspace = true
kona-providers-alloy.workspace = true
kona-client.workspace = true
# general
rkyv.workspace = true
serde_json.workspace = true
anyhow.workspace = true
cargo_metadata.workspace = true
serde_cbor.workspace = true
dotenv.workspace = true
tokio.workspace = true
futures.workspace = true
num-format.workspace = true
serde.workspace = true
reqwest.workspace = true
log.workspace = true
clap.workspace = true
sysinfo = "0.32.0"
async-trait.workspace = true
