[package]
name = "op-succinct-proof-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

# local
op-succinct-elfs.workspace = true
op-succinct-ethereum-host-utils = { workspace = true, optional = true }
op-succinct-host-utils.workspace = true
op-succinct-eigenda-host-utils = { workspace = true, optional = true }

# general
cfg-if.workspace = true
tracing.workspace = true

[features]
default = ["ethereum"]
ethereum = ["op-succinct-ethereum-host-utils"]
eigenda = ["op-succinct-eigenda-host-utils"]
