[package]
name = "op-succinct-signer-gcp-utils"
description = "Ethereum GCP KMS signer"
version.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[dependencies]
alloy-consensus = { workspace = true, features = ["std"] }
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true

async-trait.workspace = true
gcloud-sdk = { workspace = true, features = [
    "google-cloud-kms-v1",
    "google-longrunning",
] }
k256 = "0.13"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
eip712 = ["alloy-signer/eip712"]
