[package]
name = "op-succinct-altda-client-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# local
op-succinct-client-utils.workspace = true

# kona
kona-derive.workspace = true
kona-driver.workspace = true
kona-genesis.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
kona-protocol.workspace = true

# general
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
spin.workspace = true
tracing.workspace = true
