[package]
name = "celo-eigenda-registry"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
canoe-verifier-address-fetcher.workspace = true
eigenda-cert.workspace = true
